# django-log-inspector

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  tailwind.config.js
log_inspector/: apps.py  settings.py  urls.py  utils.py  views.py
log_inspector/static/log_inspector/css/: input.css  output.css
log_inspector/templates/log_inspector/: home.html  log_entries.html  log_entries_data.html  log_entries_table.html  log_file_list.html  log_files.html  pagination.html  start_live.html  stop_live.html
