[project]
name = "django-log-inspector"
authors = [
    { name = "Peyman Hassani", email = "hassani.peyman627@gmail.com" },
    { name = "Shaghayegh Valadkhani", email = "valadkhani.sh@gmail.com" },
]
version = "0.0.4"
description = "Read and Download log files"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/peyzor/django-log-inspector"