[project]
name = "django-log-inspector"
authors = [
    { name = "Peyman Hassani", email = "hassani.peyman627@gmail.com" },
    { name = "Shaghayegh Valadkhani", email = "valadkhani.sh@gmail.com" },
]
maintainers = [
    { name = "Peyman Hassani", email = "hassani.peyman627@gmail.com" },
    { name = "Shaghayegh Valadkhani", email = "valadkhani.sh@gmail.com" },
]
version = "0.0.6"
description = "Read and Download log files"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "Django", "logging", "log viewer", "real-time monitoring", "log analysis", "troubleshooting",
    "log management", "log files", "log monitoring", "debugging", "Python web development", "development tool"
]

[project.urls]
Homepage = "https://github.com/peyzor/django-log-inspector"